html boilerplate and html markup done

--- a/index.html
+++ b/index.html
@@ -1,18 +1,61 @@
-Jesus Saucedo
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Web page</title>
+</head>
+<body>
+   <h1>Jesus Saucedo</h1>
+   <section id="About">
+   <h2>About</h2>
+    <p>Hello my namew is Jesus Saucedo and I am a computer science major attending Los Medanos college and planning on
+        transfering in the next year. I am 20 years old and wiith the help of this course I hope to be able to better my
+        coding skills and create projects in order to better my ability to cold. I like to execise and fish as my hobby.</p>
+    </section>
+
+    <section id="Experience">
+    <h2>Experience</h2>
+    <ul>
+        <li>Receiver/Stocker at Lowes Home improvemnt store.</li>
+        <li>Polos Landscaping</li>
+
+    </ul>
+</section>
 
 
-About
-Hello my namew is Jesus Saucedo and I am a computer science major attending Los Medanos college and planning on
-transfering in the next year. I am 20 years old and wiith the help of this course I hope to be able to better my
-coding skills and create projects in order to better my ability to cold. I like to execise and fish as my hobby.
+    <section id="Conection">
+    <h2>Connections</h2>
+    <ul>
+        <li>Email - jsaucedo1937@gmail.com</li>
+        <li>gitHub UserName - Jesus1937</li>
+        <li>linkin - https://www.linkedin.com/in/jesus-saucedo-2a3103267/</li>
+    </ul>
+</section>
+</body>
+</html>
 
 
-Experience
-Receiver/Stocker at Lowes Home improvemnt store.
-Polos Landscaping
 
 
-Connect
-Email - jsaucedo1937@gmail.com
-gitHub UserName - Jesus1937
-linkin - https://www.linkedin.com/in/jesus-saucedo-2a3103267/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
