--- a/index.html
+++ b/index.html
@@ -4,33 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Web page</title>
+    <link rel="stylesheet" href="css/index.css">
+    <style>
+        body{
+            font-family: 'Courier New', sans-serif;
+        }
+    </style>
 </head>
-<body>
-   <h1>Jesus Saucedo</h1>
+<body style = "background-color: grey; ">
+   <h1 style = " text-align: center; text-decoration: underline; color: dark rgb(62, 61, 61)" >Jesus Saucedo</h1>
    <section id="About">
-   <h2>About</h2>
-    <p>Hello my namew is Jesus Saucedo and I am a computer science major attending Los Medanos college and planning on
+   <h2 style = "color: blue; text-align: center; margin: 20px; font-size: 50px; font-weight: bold; color: lightcoral;" >About</h2>
+    <p style = " color: blue; margin: 20px;">Hello my name is Jesus Saucedo and I am a computer science major attending Los Medanos college and planning on
         transfering in the next year. I am 20 years old and wiith the help of this course I hope to be able to better my
         coding skills and create projects in order to better my ability to cold. I like to execise and fish as my hobby.</p>
     </section>
 
     <section id="Experience">
-    <h2>Experience</h2>
+    <h2 style = "color: purple; 
+     text-align: left; 
+     font-size: 50px; 
+     font-weight: bold;
+      color: darkcyan; background-color: lightblue; border: 2px solid black;" >Experience</h2>
+    
     <ul>
-        <li>Receiver/Stocker at Lowes Home improvemnt store.</li>
-        <li>Polos Landscaping</li>
+        <li style = "color: blue; background: white; border: 1px solid black; padding-bottom: 15px; " >Receiver/Stocker at Lowes Home improvemnt store.</li>
+        <li style = "color: blue; background: white; border: 1px solid black; padding-top: 15px;">Polos Landscaping</li>
 
     </ul>
 </section>
 
 
-    <section id="Conection">
-    <h2>Connections</h2>
+    <section id="Connect">
+    <h2 style = "color: blue; margin-left: 300px; margin-top: 200; font-size: 50px; font-weight: bold; color: lightcoral; text-decoration: underline;" >Connect</h2>
     <ul>
-        <li>Email - jsaucedo1937@gmail.com</li>
-        <li>gitHub UserName - Jesus1937</li>
-        <li>linkin - https://www.linkedin.com/in/jesus-saucedo-2a3103267/</li>
+    <li style = "color: blue; margin-left: 300px; font-weight: bold; ">Email - jsaucedo1937@gmail.com</li>
+        <li style = "color: blue; margin-left: 300px; font-weight: bold" >gitHub UserName - Jesus1937</li>
+        <li style = "color: blue; margin-left: 300px; font-weight: bold" >linkin - https://www.linkedin.com/in/jesus-saucedo-2a3103267/</li>
     </ul>
+</body>
 </section>
 </body>
 </html>
