save changes made in lesson-15

--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
     <!--About me section-->
     <section id="about">
         <h2>About Jesus Saucedo</h2>
-        <p>Hello, my name is Jesus Saucedo, and I am a computer science major attending Los Medanos College and planning on transferring in the next year. I am 20 years old, and with the help of this course, I hope to improve my coding skills and create projects to better my ability to code. I like to exercise and fish as my hobby.</p>
+        <p>Hello, my name is Jesus Saucedo, and I am a computer science major attending Los Medanos College and planning on transferring in the next year. I am 20 years old, and with the help of this course, I hope to improve my coding skills and create projects to better my ability to code. I like to exercise and fish as my hobby.
+            Whenever I have free time I also enjoy playing video games or watching a tv show. I really enjoy watching movies as well. Mainly action and comedys. 
+        </p>
     </section>
 
     <!--Experience section--> 
     <section id="experience">
         <div class="columns">
             <div class="column">
-                <h3>Experience</h3>
+                <h2>Experience</h2>
                 <ul>
                     <li>Receiver/Stocker at Lowe's Home Improvement Store.</li>
                     <li>Polo's Landscaping</li>
@@ -40,7 +42,7 @@
             </div>
             
             <div class="column">
-                <h3>Dates Worked</h3>
+                <h2>Dates Worked</h2>
                 <ul>
                     <li>Started December 26th, 2021, and still employed.</li>
                     <li>Started June 10th, 2021, and also still employed.</li>
