Final Portfolio project

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <section id="about">
         <h2>About Jesus Saucedo</h2>
         <p>Hello, my name is Jesus Saucedo, and I am a computer science major attending Los Medanos College and planning on transferring in the next year. I am 20 years old, and with the help of this course, I hope to improve my coding skills and create projects to better my ability to code. I like to exercise and fish as my hobby.
-            Whenever I have free time I also enjoy playing video games or watching a tv show. I really enjoy watching movies as well. Mainly action and comedys. 
+            Whenever I have free time I also enjoy playing video games or watching a tv show. I really enjoy watching movies as well. Mainly action and comedys. I currently work part time at Lowes Home Improvement
+            and have been working there for the past 2 years as a receiver/stocker.
         </p>
     </section>
 
